// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <ProductCard /> debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Pruebas en <ProductCard /> debe mostrar el componente correctamente con la imagen personalizada 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
